# fastapi-auth-service

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config_template.py  main.py  otp_service.py  settings.py
app/routers/: __init__.py  login.py
app/templates/: login.html
