[project]
name = "fastapi-auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-multipart>=0.0.29",
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
